// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AtoZList/> rendered correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <SectionList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    onScrollToIndexFailed={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [],
          "title": "A",
        },
        Object {
          "data": Array [],
          "title": "B",
        },
        Object {
          "data": Array [],
          "title": "C",
        },
        Object {
          "data": Array [],
          "title": "D",
        },
        Object {
          "data": Array [],
          "title": "E",
        },
        Object {
          "data": Array [],
          "title": "F",
        },
        Object {
          "data": Array [],
          "title": "G",
        },
        Object {
          "data": Array [],
          "title": "H",
        },
        Object {
          "data": Array [],
          "title": "I",
        },
        Object {
          "data": Array [],
          "title": "J",
        },
        Object {
          "data": Array [],
          "title": "K",
        },
        Object {
          "data": Array [],
          "title": "L",
        },
        Object {
          "data": Array [],
          "title": "M",
        },
        Object {
          "data": Array [],
          "title": "N",
        },
        Object {
          "data": Array [],
          "title": "O",
        },
        Object {
          "data": Array [],
          "title": "P",
        },
        Object {
          "data": Array [],
          "title": "Q",
        },
        Object {
          "data": Array [],
          "title": "R",
        },
        Object {
          "data": Array [],
          "title": "S",
        },
        Object {
          "data": Array [],
          "title": "T",
        },
        Object {
          "data": Array [],
          "title": "U",
        },
        Object {
          "data": Array [],
          "title": "V",
        },
        Object {
          "data": Array [],
          "title": "W",
        },
        Object {
          "data": Array [],
          "title": "X",
        },
        Object {
          "data": Array [],
          "title": "Y",
        },
        Object {
          "data": Array [],
          "title": "Z",
        },
        Object {
          "data": Array [],
          "title": "#",
        },
      ]
    }
    stickySectionHeadersEnabled={true}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <View
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      key="0"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        A
      </Text>
    </View>
    <View
      key="1"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        B
      </Text>
    </View>
    <View
      key="2"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        C
      </Text>
    </View>
    <View
      key="3"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        D
      </Text>
    </View>
    <View
      key="4"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        E
      </Text>
    </View>
    <View
      key="5"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        F
      </Text>
    </View>
    <View
      key="6"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        G
      </Text>
    </View>
    <View
      key="7"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        H
      </Text>
    </View>
    <View
      key="8"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        I
      </Text>
    </View>
    <View
      key="9"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        J
      </Text>
    </View>
    <View
      key="10"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        K
      </Text>
    </View>
    <View
      key="11"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        L
      </Text>
    </View>
    <View
      key="12"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        M
      </Text>
    </View>
    <View
      key="13"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        N
      </Text>
    </View>
    <View
      key="14"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        O
      </Text>
    </View>
    <View
      key="15"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        P
      </Text>
    </View>
    <View
      key="16"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        Q
      </Text>
    </View>
    <View
      key="17"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        R
      </Text>
    </View>
    <View
      key="18"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        S
      </Text>
    </View>
    <View
      key="19"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        T
      </Text>
    </View>
    <View
      key="20"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        U
      </Text>
    </View>
    <View
      key="21"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        V
      </Text>
    </View>
    <View
      key="22"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        W
      </Text>
    </View>
    <View
      key="23"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        X
      </Text>
    </View>
    <View
      key="24"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        Y
      </Text>
    </View>
    <View
      key="25"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        Z
      </Text>
    </View>
    <View
      key="26"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        #
      </Text>
    </View>
  </View>
</View>
`;

exports[`<AtoZList/> rendered correctly with items 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <SectionList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    onScrollToIndexFailed={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            "AAA",
          ],
          "title": "A",
        },
        Object {
          "data": Array [
            "BBB",
          ],
          "title": "B",
        },
        Object {
          "data": Array [
            "CCC",
          ],
          "title": "C",
        },
        Object {
          "data": Array [
            "DDD",
          ],
          "title": "D",
        },
        Object {
          "data": Array [
            "EEE",
          ],
          "title": "E",
        },
        Object {
          "data": Array [
            "FFF",
          ],
          "title": "F",
        },
        Object {
          "data": Array [
            "GGG",
          ],
          "title": "G",
        },
        Object {
          "data": Array [
            "HHH",
          ],
          "title": "H",
        },
        Object {
          "data": Array [
            "III",
          ],
          "title": "I",
        },
        Object {
          "data": Array [
            "JJJ",
          ],
          "title": "J",
        },
        Object {
          "data": Array [
            "KKK",
          ],
          "title": "K",
        },
        Object {
          "data": Array [
            "LLL",
          ],
          "title": "L",
        },
        Object {
          "data": Array [
            "MMM",
          ],
          "title": "M",
        },
        Object {
          "data": Array [
            "NNN",
          ],
          "title": "N",
        },
        Object {
          "data": Array [
            "OOO",
          ],
          "title": "O",
        },
        Object {
          "data": Array [
            "PPP",
          ],
          "title": "P",
        },
        Object {
          "data": Array [
            "QQQ",
          ],
          "title": "Q",
        },
        Object {
          "data": Array [
            "RRR",
          ],
          "title": "R",
        },
        Object {
          "data": Array [
            "SSS",
          ],
          "title": "S",
        },
        Object {
          "data": Array [
            "TTT",
          ],
          "title": "T",
        },
        Object {
          "data": Array [
            "UUU",
          ],
          "title": "U",
        },
        Object {
          "data": Array [
            "VVV",
          ],
          "title": "V",
        },
        Object {
          "data": Array [
            "WWW",
          ],
          "title": "W",
        },
        Object {
          "data": Array [
            "XXX",
          ],
          "title": "X",
        },
        Object {
          "data": Array [
            "YYY",
          ],
          "title": "Y",
        },
        Object {
          "data": Array [
            "ZZZ",
          ],
          "title": "Z",
        },
        Object {
          "data": Array [],
          "title": "#",
        },
      ]
    }
    stickySectionHeadersEnabled={true}
    style={
      Object {
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <View
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      key="0"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        A
      </Text>
    </View>
    <View
      key="1"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        B
      </Text>
    </View>
    <View
      key="2"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        C
      </Text>
    </View>
    <View
      key="3"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        D
      </Text>
    </View>
    <View
      key="4"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        E
      </Text>
    </View>
    <View
      key="5"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        F
      </Text>
    </View>
    <View
      key="6"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        G
      </Text>
    </View>
    <View
      key="7"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        H
      </Text>
    </View>
    <View
      key="8"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        I
      </Text>
    </View>
    <View
      key="9"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        J
      </Text>
    </View>
    <View
      key="10"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        K
      </Text>
    </View>
    <View
      key="11"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        L
      </Text>
    </View>
    <View
      key="12"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        M
      </Text>
    </View>
    <View
      key="13"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        N
      </Text>
    </View>
    <View
      key="14"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        O
      </Text>
    </View>
    <View
      key="15"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        P
      </Text>
    </View>
    <View
      key="16"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        Q
      </Text>
    </View>
    <View
      key="17"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        R
      </Text>
    </View>
    <View
      key="18"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        S
      </Text>
    </View>
    <View
      key="19"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        T
      </Text>
    </View>
    <View
      key="20"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        U
      </Text>
    </View>
    <View
      key="21"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        V
      </Text>
    </View>
    <View
      key="22"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        W
      </Text>
    </View>
    <View
      key="23"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        X
      </Text>
    </View>
    <View
      key="24"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        Y
      </Text>
    </View>
    <View
      key="25"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        Z
      </Text>
    </View>
    <View
      key="26"
      onLayout={[Function]}
    >
      <Text
        style={
          Object {
            "fontSize": 12,
            "paddingBottom": 4,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 4,
          }
        }
      >
        #
      </Text>
    </View>
  </View>
</View>
`;
